k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gaia-abiz
  labels:
    name: gaia-abiz
